src/components/navbar/Navbar.css
.navbar {
    background-color: #105dc5;
    padding: 12px;
    color: #e1e1e1;
    height: 100vh;
    width: 250px;
    border-bottom-right-radius: 8px;
    border-top-right-radius: 8px;
    box-sizing: border-box;
    overflow: hidden;
    font-weight: 500;
    transition: width 0.3s ease;
    position: relative;
}

.navbar.collapsed {
    width: 60px;
}

.navbar.collapsed h1,
.navbar.collapsed .link-text,
.navbar.collapsed .theme-text {
    display: none;
}

.navbar.collapsed ul li {
    width: auto;
    text-align: center;
}

.navbar.collapsed ul li a {
    padding: 4px 0;
    justify-content: center;
}

.toggle-button {
    position: absolute;
    top: 10px;
    right: 10px;
    background: none;
    border: none;
    color: #e1e1e1;
    cursor: pointer;
    padding: 5px;
    z-index: 1;
}

/* Reszta istniejących styli pozostaje bez zmian */
.navbar {
    overflow-x: hidden;
    overflow-y: auto;
}

.navbar h1 {
    margin: 0 0 20px;
    font-size: 1.5rem;
}

.navbar ul li {
    width: 170px;
    margin-bottom: 10px;
    list-style: none;
}

.navbar a {
    display: flex;
    align-items: center;
    padding: 4px;
    color: #e1e1e1;
    text-decoration: none;
    transition: color 0.3s ease;
}

.navbar a:hover {
    color: #050505;
}

.navbar a.active {
    background-color: #06327a;
    border-radius: 8px;
}

.theme-switch input {
    display: none;
}

.theme-switch {
    position: relative;
    display: inline-block;
    width: 50px;
    height: 24px;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 5px;
    bottom: 0;
    background-color: var(--toggle-bg);
    transition: background-color 0.4s;
    border-radius: 34px;

}

.slider::before {
    position: absolute;
    content: "";
    height: 18px;
    width: 18px;
    left: 0;
    bottom: 3px;
    background-color: var(--toggle-fg);
    transition: transform 0.4s;
    border-radius: 50%;
}

input:checked + .slider {
    background-color: var(--toggle-bg);
}

input:checked + .slider::before {
    transform: translateX(26px);
}

